--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
